--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -3,14 +3,16 @@
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 
-// Color Variables
+// color variables
 $color-main: #333;
 $color-light: #999;
 $color-accent: #ea4c89;
-// Font Variables
-// 
-
+// font variables
+$font-sans:"Proxima Nova", "Helvetica Neue", Arial, sans-serif;
+$font-serif: Jubilat, Georgia, serif;
+//reset
 @import"compass/reset";
+//main content
 header[role="banner"] {
   margin: 20px 0 30px 0;
   border-bottom: 4px solid #333;
@@ -26,13 +28,13 @@ header[role="banner"] {
     padding: 15px 0;
     font: {
       size: 54px;
-      family: Jubilat, Georgia, serif;
+      family: $font-serif;
       weight: bold;
     }
     line-height: 1;
     text: {
       transform: uppercase;
-      align: center;
+      // align: center;
     }
   }
   background: {
@@ -54,6 +56,13 @@ li a {
 }
 section.main p {
   margin: 0 0 20px 0;
-  font-size: 18px;
   line-height: 1.5;
+}
+body {
+  padding: 0.8%;
+  font: {
+    size: 100%;
+    family: $font-sans;
+  }
+  color: $color-main;
 }
