--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -3,19 +3,23 @@
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 
-// color variables
-$color-main: #333;
-$color-light: #999;
-$color-accent: #ea4c89;
-// font variables
-$font-sans:"Proxima Nova", "Helvetica Neue", Arial, sans-serif;
-$font-serif: Jubilat, Georgia, serif;
 //reset
 @import"compass/reset";
+
+// color variables
+$color-main: #333;        // black
+$color-light: #999;       //grey
+$color-accent: #ea4c89;   // pink
+
+// font variables
+$font-sans:"Proxima Nova", "Helvetica Neue", Arial, sans-serif;
+$font-serif: "Jubilat", Georgia, serif;
+
 //main content
 header[role="banner"] {
   margin: 20px 0 30px 0;
   border-bottom: 4px solid #333;
+  
   #logo {
     float: left;
     margin: 0 20px 0 0;
@@ -24,6 +28,7 @@ header[role="banner"] {
       opacity: .95;
     }
   }
+  
   h1 {
     padding: 15px 0;
     font: {
@@ -31,22 +36,25 @@ header[role="banner"] {
       family: $font-serif;
       weight: bold;
     }
+
     line-height: 1;
     text: {
       transform: uppercase;
       // align: center;
     }
   }
+
   background: {
     color: $color-accent;
   }
 }
+
+
 li a {
   color: blue;
   &:hover {
-    color: maroon;
-    border-color: maroon;
-  }
+    color: $color-accent;
+    }
   &.alert {
     color: red;
   }
@@ -54,10 +62,8 @@ li a {
     color: green;
   }
 }
-section.main p {
-  margin: 0 0 20px 0;
-  line-height: 1.5;
-}
+
+
 body {
   padding: 0.8%;
   font: {
@@ -65,4 +71,18 @@ body {
     family: $font-sans;
   }
   color: $color-main;
+}
+
+
+section.main p {
+  margin: 0 0 20px 0;
+  line-height: 1.4;
+}
+
+
+
+section.secondary {
+  width: 48%;
+  height: 50px;
+  background: darken($color-accent, 30%);
 }
