--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -67,60 +67,66 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   display: block;
 }
 
-/* line 16, ../sass/screen.scss */
+/* line 19, ../sass/screen.scss */
 header[role="banner"] {
   margin: 20px 0 30px 0;
   border-bottom: 4px solid #333;
   background-color: #ea4c89;
 }
-/* line 19, ../sass/screen.scss */
+/* line 23, ../sass/screen.scss */
 header[role="banner"] #logo {
   float: left;
   margin: 0 20px 0 0;
 }
-/* line 22, ../sass/screen.scss */
+/* line 26, ../sass/screen.scss */
 header[role="banner"] #logo img {
   display: block;
   opacity: .95;
 }
-/* line 27, ../sass/screen.scss */
+/* line 32, ../sass/screen.scss */
 header[role="banner"] h1 {
   padding: 15px 0;
   font-size: 54px;
-  font-family: Jubilat, Georgia, serif;
+  font-family: "Jubilat", Georgia, serif;
   font-weight: bold;
   line-height: 1;
   text-transform: uppercase;
 }
 
-/* line 44, ../sass/screen.scss */
+/* line 53, ../sass/screen.scss */
 li a {
   color: blue;
 }
-/* line 46, ../sass/screen.scss */
+/* line 55, ../sass/screen.scss */
 li a:hover {
-  color: maroon;
-  border-color: maroon;
+  color: #ea4c89;
 }
-/* line 50, ../sass/screen.scss */
+/* line 58, ../sass/screen.scss */
 li a.alert {
   color: red;
 }
-/* line 53, ../sass/screen.scss */
+/* line 61, ../sass/screen.scss */
 li a.success {
   color: green;
 }
 
-/* line 57, ../sass/screen.scss */
-section.main p {
-  margin: 0 0 20px 0;
-  line-height: 1.5;
-}
-
-/* line 61, ../sass/screen.scss */
+/* line 67, ../sass/screen.scss */
 body {
   padding: 0.8%;
   font-size: 100%;
   font-family: "Proxima Nova", "Helvetica Neue", Arial, sans-serif;
   color: #333;
+}
+
+/* line 77, ../sass/screen.scss */
+section.main p {
+  margin: 0 0 20px 0;
+  line-height: 1.4;
+}
+
+/* line 84, ../sass/screen.scss */
+section.secondary {
+  width: 48%;
+  height: 50px;
+  background: #8d1040;
 }
