--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -8,17 +8,17 @@
 
 // color variables
 $color-main: #333;        // black
-$color-light: #999;       //grey
-$color-accent: #ea4c89;   // pink
+$color-light: #999;       // grey
+$color-accent: #47ff3d;   // green
 
 // font variables
-$font-sans:"Proxima Nova", "Helvetica Neue", Arial, sans-serif;
+$font-sans: "Proxima Nova", "Helvetica Neue", Arial, sans-serif;
 $font-serif: "Jubilat", Georgia, serif;
 
 //main content
 header[role="banner"] {
   margin: 20px 0 30px 0;
-  border-bottom: 4px solid #333;
+  // border-bottom: 4px solid #333;
   
   #logo {
     float: left;
@@ -40,12 +40,12 @@ header[role="banner"] {
     line-height: 1;
     text: {
       transform: uppercase;
-      // align: center;
+      align: center;
     }
   }
 
   background: {
-    color: $color-accent;
+    color: $color-light;
   }
 }
 
@@ -80,9 +80,18 @@ section.main p {
 }
 
 
-
-section.secondary {
-  width: 48%;
-  height: 50px;
-  background: darken($color-accent, 30%);
+section.color {
+  width: 100%;
+  .primary {
+    height: 50px;
+    background: darken($color-accent, 10%);
+  }
+  .secondary {
+    height: 50px;
+    background: darken($color-accent, 30%)
+  }
+  .tertiary {
+    height: 50px;
+    background: darken($color-accent, 50%)
+  }
 }
