testing the use of mixins

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -15,6 +15,21 @@ $color-accent: #47ff3d;   // green
 $font-sans: "Proxima Nova", "Helvetica Neue", Arial, sans-serif;
 $font-serif: "Jubilat", Georgia, serif;
 
+//mixins
+@mixin title-style {
+  margin: 0 0 20px 0;
+  font-family: $font-serif;
+  font-size: 20px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+@mixin color-bar {
+  width: 100%;
+  height: 80px;
+  clear: both;
+}
+
 //main content
 header[role="banner"] {
   margin: 20px 0 30px 0;
@@ -73,6 +88,14 @@ body {
   color: $color-main;
 }
 
+section.main h2 {
+  @include title-style;
+}
+
+section.main h3 {
+  @include title-style;
+  color: #999;
+}
 
 section.main p {
   margin: 0 0 20px 0;
@@ -81,17 +104,16 @@ section.main p {
 
 
 section.color {
-  width: 100%;
   .primary {
-    height: 50px;
+    @include color-bar;
     background: darken($color-accent, 10%);
   }
   .secondary {
-    height: 50px;
+    @include color-bar;
     background: darken($color-accent, 30%)
   }
   .tertiary {
-    height: 50px;
+    @include color-bar;
     background: darken($color-accent, 50%)
   }
 }
