--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -3,25 +3,20 @@
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 
-//reset
+//import other files
 @import"compass/reset";
-
-// color variables
-$color-main: #333;        // black
-$color-light: #999;       // grey
-$color-accent: #47ff3d;   // green
-
-// font variables
-$font-sans: "Proxima Nova", "Helvetica Neue", Arial, sans-serif;
-$font-serif: "Jubilat", Georgia, serif;
+@import "_mixin.scss";
+@import "_variables.scss";
 
 //mixins
-@mixin title-style {
+@mixin title-style($color, $background: #eee) {
   margin: 0 0 20px 0;
   font-family: $font-serif;
   font-size: 20px;
   font-weight: bold;
   text-transform: uppercase;
+  color: $color;
+  background: $background;
 }
 
 @mixin color-bar {
@@ -33,7 +28,7 @@ $font-serif: "Jubilat", Georgia, serif;
 //main content
 header[role="banner"] {
   margin: 20px 0 30px 0;
-  // border-bottom: 4px solid #333;
+  @include rounded(10px);
   
   #logo {
     float: left;
@@ -46,6 +41,7 @@ header[role="banner"] {
   
   h1 {
     padding: 15px 0;
+    color: $color-light;
     font: {
       size: 54px;
       family: $font-serif;
@@ -60,16 +56,22 @@ header[role="banner"] {
   }
 
   background: {
-    color: $color-light;
+    color: $color-main;
   }
 }
 
 
-li a {
+a {
+  text-decoration: none;
   color: blue;
   &:hover {
     color: $color-accent;
     }
+  &:active {
+    color: #fff;
+    @include rounded(4px);
+    @include linear-gradient(#ff70b1, #d42a78)   
+  }
   &.alert {
     color: red;
   }
@@ -89,11 +91,11 @@ body {
 }
 
 section.main h2 {
-  @include title-style;
+  @include title-style($color-main);
 }
 
 section.main h3 {
-  @include title-style;
+  @include title-style($color-accent, #color-light);
   color: #999;
 }
 
