--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,8 +1,10 @@
 // color variables
-$color-main: #333;        // black
-$color-light: #999;       // grey
-$color-accent: #47ff3d;   // green
+$color-main: #333;          // black
+$color-light: #999;         // grey
+$color-accent: #fb681b;     // orange
+$color-brand: #2f3e47;      //brand-blue
+
 
 // font variables
-$font-sans: "Helvetica Neue", Verdana, sans-serif;
-$font-serif: Georgia, serif;
+$font-sans: "Effra", Verdana, Arial, sans-serif;
+$font-light: "Effra Light", Verdans, Arial, sans-serif;
