--- a/sass/modules/_colors.scss
+++ b/sass/modules/_colors.scss
@@ -1,7 +1,7 @@
 // Text colors
-$main-color: #333;                              // black
-$medium-color: #666;                            // grey
-$light-color: #999;                             // light-grey
+$main-color: #111;                              // black
+$medium-color: #777;                            // grey
+$light-color: #ccc;                             // light-grey
 
 // Brand colors
 $brand-color: #2f3e47;                          // brand-blue
