--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -101,7 +101,7 @@ body {
   padding: 0.8%;
   font-size: 100%;
   font-family: "Effra", Verdana, Arial, sans-serif;
-  color: #333;
+  color: #111;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -121,7 +121,7 @@ header[role="banner"] {
 header[role="banner"] h1 {
   padding: 15px 0 18px 0;
   margin: 0 auto;
-  color: #999;
+  color: #ccc;
   font-size: 2.5em;
   font-family: "Effra Light", Verdans, Arial, sans-serif;
   line-height: 1;
@@ -137,7 +137,7 @@ section {
 section.main h2 {
   font-family: "Effra Light", Verdans, Arial, sans-serif;
   font-size: 1.25em;
-  color: #333;
+  color: #111;
   background: #fff;
   font-size: 1.5em;
 }
@@ -146,7 +146,7 @@ section.main h2 {
 section.main h3 {
   font-family: "Effra Light", Verdans, Arial, sans-serif;
   font-size: 1.25em;
-  color: #999;
+  color: #777;
   background: #fff;
 }
 
@@ -159,21 +159,22 @@ section.main p {
 /* line 71, ../sass/screen.scss */
 a {
   text-decoration: none;
+  border-bottom: 1px solid #ccc;
   color: #fb681b;
 }
-/* line 74, ../sass/screen.scss */
+/* line 75, ../sass/screen.scss */
 a:hover {
   color: rgba(251, 104, 27, 0.8);
 }
-/* line 77, ../sass/screen.scss */
+/* line 78, ../sass/screen.scss */
 a:active {
   color: rgba(47, 62, 71, 0.8);
 }
-/* line 80, ../sass/screen.scss */
+/* line 81, ../sass/screen.scss */
 a.alert {
   color: red;
 }
-/* line 83, ../sass/screen.scss */
+/* line 84, ../sass/screen.scss */
 a.success {
   color: green;
 }
