--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -109,15 +109,24 @@ body {
 
 /* line 25, ../sass/screen.scss */
 .content-wrapper {
+  max-width: 80em;
+  margin-left: auto;
+  margin-right: auto;
   margin: 0 auto;
   padding: 0 30px 0 30px;
 }
+/* line 12, ../../../.rbenv/versions/2.2.0-dev/lib/ruby/gems/2.2.0/gems/susy-2.1.3/sass/susy/output/support/_clearfix.scss */
+.content-wrapper:after {
+  content: " ";
+  display: block;
+  clear: both;
+}
 
-/* line 30, ../sass/screen.scss */
+/* line 31, ../sass/screen.scss */
 header[role="banner"] {
   background-color: #2f3e47;
 }
-/* line 32, ../sass/screen.scss */
+/* line 33, ../sass/screen.scss */
 header[role="banner"] h1 {
   padding: 15px 0 18px 0;
   margin: 0 auto;
@@ -128,12 +137,12 @@ header[role="banner"] h1 {
   text-align: center;
 }
 
-/* line 52, ../sass/screen.scss */
+/* line 53, ../sass/screen.scss */
 section {
   margin-top: 20px;
 }
 
-/* line 56, ../sass/screen.scss */
+/* line 57, ../sass/screen.scss */
 section.main h2 {
   font-family: "Effra Light", Verdans, Arial, sans-serif;
   font-size: 1.25em;
@@ -142,7 +151,7 @@ section.main h2 {
   font-size: 1.5em;
 }
 
-/* line 61, ../sass/screen.scss */
+/* line 62, ../sass/screen.scss */
 section.main h3 {
   font-family: "Effra Light", Verdans, Arial, sans-serif;
   font-size: 1.25em;
@@ -150,31 +159,31 @@ section.main h3 {
   background: #fff;
 }
 
-/* line 65, ../sass/screen.scss */
+/* line 66, ../sass/screen.scss */
 section.main p {
   margin: 0 0 20px 0;
   line-height: 1.4;
 }
 
-/* line 71, ../sass/screen.scss */
+/* line 72, ../sass/screen.scss */
 a {
   text-decoration: none;
   border-bottom: 1px solid #ccc;
   color: #fb681b;
 }
-/* line 75, ../sass/screen.scss */
+/* line 76, ../sass/screen.scss */
 a:hover {
   color: rgba(251, 104, 27, 0.8);
 }
-/* line 78, ../sass/screen.scss */
+/* line 79, ../sass/screen.scss */
 a:active {
   color: rgba(47, 62, 71, 0.8);
 }
-/* line 81, ../sass/screen.scss */
+/* line 82, ../sass/screen.scss */
 a.alert {
   color: red;
 }
-/* line 84, ../sass/screen.scss */
+/* line 85, ../sass/screen.scss */
 a.success {
   color: green;
 }
