--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -98,6 +98,9 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 
 /* line 15, ../sass/screen.scss */
 body {
+  max-width: 60em;
+  margin-left: auto;
+  margin-right: auto;
   padding: 0.8%;
   font-size: 100%;
   font-family: "Effra", Verdana, Arial, sans-serif;
@@ -106,27 +109,18 @@ body {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-
-/* line 25, ../sass/screen.scss */
-.content-wrapper {
-  max-width: 80em;
-  margin-left: auto;
-  margin-right: auto;
-  margin: 0 auto;
-  padding: 0 30px 0 30px;
-}
 /* line 12, ../../../.rbenv/versions/2.2.0-dev/lib/ruby/gems/2.2.0/gems/susy-2.1.3/sass/susy/output/support/_clearfix.scss */
-.content-wrapper:after {
+body:after {
   content: " ";
   display: block;
   clear: both;
 }
 
-/* line 31, ../sass/screen.scss */
+/* line 30, ../sass/screen.scss */
 header[role="banner"] {
   background-color: #2f3e47;
 }
-/* line 33, ../sass/screen.scss */
+/* line 32, ../sass/screen.scss */
 header[role="banner"] h1 {
   padding: 15px 0 18px 0;
   margin: 0 auto;
@@ -137,13 +131,18 @@ header[role="banner"] h1 {
   text-align: center;
 }
 
-/* line 53, ../sass/screen.scss */
-section {
-  margin-top: 20px;
+/* line 52, ../sass/screen.scss */
+section .main {
+  float: left;
 }
 
 /* line 57, ../sass/screen.scss */
-section.main h2 {
+section .second {
+  float: left;
+}
+
+/* line 62, ../sass/screen.scss */
+section h2 {
   font-family: "Effra Light", Verdans, Arial, sans-serif;
   font-size: 1.25em;
   color: #111;
@@ -151,39 +150,39 @@ section.main h2 {
   font-size: 1.5em;
 }
 
-/* line 62, ../sass/screen.scss */
-section.main h3 {
+/* line 67, ../sass/screen.scss */
+section h3 {
   font-family: "Effra Light", Verdans, Arial, sans-serif;
   font-size: 1.25em;
   color: #777;
   background: #fff;
 }
 
-/* line 66, ../sass/screen.scss */
-section.main p {
+/* line 71, ../sass/screen.scss */
+section p {
   margin: 0 0 20px 0;
   line-height: 1.4;
 }
 
-/* line 72, ../sass/screen.scss */
+/* line 77, ../sass/screen.scss */
 a {
   text-decoration: none;
   border-bottom: 1px solid #ccc;
   color: #fb681b;
 }
-/* line 76, ../sass/screen.scss */
+/* line 81, ../sass/screen.scss */
 a:hover {
   color: rgba(251, 104, 27, 0.8);
 }
-/* line 79, ../sass/screen.scss */
+/* line 84, ../sass/screen.scss */
 a:active {
   color: rgba(47, 62, 71, 0.8);
 }
-/* line 82, ../sass/screen.scss */
+/* line 87, ../sass/screen.scss */
 a.alert {
   color: red;
 }
-/* line 85, ../sass/screen.scss */
+/* line 90, ../sass/screen.scss */
 a.success {
   color: green;
 }
