--- a/sass/partials/_grids.scss
+++ b/sass/partials/_grids.scss
@@ -3,11 +3,11 @@
 
 @import "susy";
 
+// Changing Susu default global settings
 $susy: (
   columns: 12,
   container: 1120px,
-  gutters: 1/4,
   global-box-sizing: border-box
 );
 
-// @include box-sizing;
+@include border-box-sizing;
