--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -1,27 +1,27 @@
-// Use Compass
+/* Use Compass */
 @import "compass";
 
-// Font weights
+/* Font weights */
 $light: 100;
 $regular: 400;
 $bold: 600;
 
-// Base Font
+/* Base Font */
 $base-font-family: sans-serif;
 $base-font-weight: $regular;
 $base-font-size: 16px;
 $base-line-height: 1.4;
 
-// Fixed Font
+/* Fixed Font */
 $fixed-font-family: monospace;
 $fixed-font-size: 85%;
 $fixed-line-height: $base-line-height;
 
-// Headings
+/* Headings */
 $header-font-weight: $bold;
 
 @import "modules/_colors.scss";
 @import "modules/_breakpoints.scss";
 @import "modules/_fonts.scss";
 @import "modules/_mixin_prefixes.scss";
-@import "modules/_mixin.scss";
+// @import "modules/_mixin.scss";
