--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -2,6 +2,11 @@
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
+/* Use Compass */
+/* Font weights */
+/* Base Font */
+/* Fixed Font */
+/* Headings */
 /*-------@font-face-------*/
 @font-face {
   font-family: 'Effra';
@@ -96,7 +101,59 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   display: block;
 }
 
+/* line 14, ../../../.rbenv/versions/2.2.0-dev/lib/ruby/gems/2.2.0/gems/susy-2.1.3/sass/susy/language/susy/_box-sizing.scss */
+*, *:before, *:after {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
 /* line 15, ../sass/screen.scss */
+.wrap {
+  max-width: 1120px;
+  margin-left: auto;
+  margin-right: auto;
+}
+/* line 12, ../../../.rbenv/versions/2.2.0-dev/lib/ruby/gems/2.2.0/gems/susy-2.1.3/sass/susy/output/support/_clearfix.scss */
+.wrap:after {
+  content: " ";
+  display: block;
+  clear: both;
+}
+
+/* line 19, ../sass/screen.scss */
+.content {
+  width: 66.10169%;
+  float: left;
+  margin-right: 1.69492%;
+}
+
+/* line 23, ../sass/screen.scss */
+.sidebar {
+  width: 32.20339%;
+  float: right;
+  margin-right: 0;
+}
+
+/* line 27, ../sass/screen.scss */
+.social {
+  padding: 1.69492%;
+  overflow: hidden;
+  *zoom: 1;
+}
+/* line 31, ../sass/screen.scss */
+.social .social__List-item {
+  width: 8.16327%;
+  float: left;
+  margin-right: 2.04082%;
+}
+/* line 33, ../sass/screen.scss */
+.social .social__List-item:last-child {
+  float: right;
+  margin-right: 0;
+}
+
+/* line 40, ../sass/screen.scss */
 body {
   padding: 0.8%;
   font-size: 100%;
@@ -104,11 +161,11 @@ body {
   color: #111;
 }
 
-/* line 28, ../sass/screen.scss */
+/* line 49, ../sass/screen.scss */
 header[role="banner"] {
   background-color: #2f3e47;
 }
-/* line 30, ../sass/screen.scss */
+/* line 51, ../sass/screen.scss */
 header[role="banner"] h1 {
   padding: 15px 0 18px 0;
   margin: 0 auto;
@@ -119,58 +176,46 @@ header[role="banner"] h1 {
   text-align: center;
 }
 
-/* line 50, ../sass/screen.scss */
+/* line 71, ../sass/screen.scss */
 section .main {
   float: left;
 }
 
-/* line 55, ../sass/screen.scss */
+/* line 76, ../sass/screen.scss */
 section .second {
   float: left;
 }
 
-/* line 60, ../sass/screen.scss */
+/* line 81, ../sass/screen.scss */
 section h2 {
-  font-family: "Effra Light", Verdans, Arial, sans-serif;
-  font-size: 1.25em;
-  color: #111;
-  background: #fff;
   font-size: 1.5em;
 }
 
-/* line 65, ../sass/screen.scss */
-section h3 {
-  font-family: "Effra Light", Verdans, Arial, sans-serif;
-  font-size: 1.25em;
-  color: #777;
-  background: #fff;
-}
-
-/* line 69, ../sass/screen.scss */
+/* line 90, ../sass/screen.scss */
 section p {
   margin: 0 0 20px 0;
   line-height: 1.4;
 }
 
-/* line 75, ../sass/screen.scss */
+/* line 96, ../sass/screen.scss */
 a {
   text-decoration: none;
   border-bottom: 1px solid #ccc;
   color: #fb681b;
 }
-/* line 79, ../sass/screen.scss */
+/* line 100, ../sass/screen.scss */
 a:hover {
   color: rgba(251, 104, 27, 0.8);
 }
-/* line 82, ../sass/screen.scss */
+/* line 103, ../sass/screen.scss */
 a:active {
   color: rgba(47, 62, 71, 0.8);
 }
-/* line 85, ../sass/screen.scss */
+/* line 106, ../sass/screen.scss */
 a.alert {
   color: red;
 }
-/* line 88, ../sass/screen.scss */
+/* line 109, ../sass/screen.scss */
 a.success {
   color: green;
 }
